src/jj/Parser.java
/* Parser.java */
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package jj;

import ast.ParamWrapper;
import ast.VariableType;
import ast.node.CuNode;
import ast.node.Node;
import ast.node.atom.*;
import ast.node.atom.literals.*;
import ast.node.decl.DeclNode;
import ast.node.decl.MethDeclNode;
import ast.node.decl.VarDeclNode;
import ast.node.expr.*;
import ast.node.stmnt.*;
import ast.node.type.ArrayTypeNode;
import ast.node.type.MapTypeNode;
import ast.node.type.SetTypeNode;
import ast.node.type.TypeNode;

public class Parser implements ParserConstants {

// Parser

// CU -> (decl | stmnt)*
  final public CuNode cu() throws ParseException {
    trace_call("cu");
    try {
CuNode node = new CuNode();
        Node declOrStmnt;
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 6:
        case 7:
        case 11:
        case 16:
        case 19:
        case 21:
        case 23:
        case 25:
        case 27:
        case 28:
        case 30:
        case 32:
        case 33:
        case Type:
        case 35:
        case 36:
        case BoolLiteral:
        case CharLiteral:
        case StringLiteral:
        case IntegerLiteral:
        case Identifier:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case Type:
        case 35:
        case 36:{
          declOrStmnt = decl();
          break;
          }
        case 6:
        case 7:
        case 11:
        case 16:
        case 19:
        case 21:
        case 23:
        case 25:
        case 27:
        case 28:
        case 30:
        case 32:
        case 33:
        case BoolLiteral:
        case CharLiteral:
        case StringLiteral:
        case IntegerLiteral:
        case Identifier:{
          declOrStmnt = stmnt();
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
node.declOrStmntList.add(declOrStmnt);
      }
{if ("" != null) return node;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("cu");
    }
}

// decl -> type() <Identifier> (varDecl | methDecl | ";")
  final public DeclNode decl() throws ParseException {
    trace_call("decl");
    try {
Token identifier;
        TypeNode type;
        DeclNode node = null;
      type = type();
      identifier = jj_consume_token(Identifier);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 13:{
        node = varDecl(type, identifier);
        break;
        }
      case 21:{
        node = methDecl(type, identifier);
        break;
        }
      case 27:{
        jj_consume_token(27);
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
{if ("" != null) return node == null ? new DeclNode(type, identifier) : node;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("decl");
    }
}

// varDecl -> "=" expr ";"
  final public VarDeclNode varDecl(TypeNode type, Token identifier) throws ParseException {
    trace_call("varDecl");
    try {
ExprNode expr;
      jj_consume_token(13);
      expr = expr();
      jj_consume_token(27);
{if ("" != null) return new VarDeclNode(type, identifier, expr);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("varDecl");
    }
}

// methDecl -> "(" (type <Identifier> ("," type <Identifier>)*)? ")" stmnt
  final public MethDeclNode methDecl(TypeNode type, Token identifier) throws ParseException {
    trace_call("methDecl");
    try {
MethDeclNode node = new MethDeclNode(type, identifier);
        TypeNode firstType, lastType;
        Token firstIdentifier, lastIdentifier;
        StmntNode body;
        int countIndex = 1;
      jj_consume_token(21);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case Type:
      case 35:
      case 36:{
        firstType = type();
        firstIdentifier = jj_consume_token(Identifier);
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 14:{
            ;
            break;
            }
          default:
            jj_la1[3] = jj_gen;
            break label_2;
          }
          jj_consume_token(14);
          lastType = type();
          lastIdentifier = jj_consume_token(Identifier);
node.params.put(lastIdentifier, new ParamWrapper(countIndex++,lastType,lastIdentifier));
        }
node.params.put(firstIdentifier, new ParamWrapper(0,firstType,firstIdentifier));
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      jj_consume_token(22);
      body = stmnt();
node.body = body; {if ("" != null) return node;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("methDecl");
    }
}

// stmnt -> returnStmnt | ifStmnt | whileStmnt | blockStmnt | expr | ";"
  final public StmntNode stmnt() throws ParseException {
    trace_call("stmnt");
    try {
StmntNode node = null;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 33:{
        node = returnStmnt();
        break;
        }
      case 30:{
        node = ifStmnt();
        break;
        }
      case 32:{
        node = whileStmnt();
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        if (jj_2_1(3)) {
          node = blockStmnt();
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 6:
          case 7:
          case 11:
          case 16:
          case 19:
          case 21:
          case 23:
          case 25:
          case 28:
          case BoolLiteral:
          case CharLiteral:
          case StringLiteral:
          case IntegerLiteral:
          case Identifier:{
            node = expr();
            break;
            }
          case 27:{
            jj_consume_token(27);
            break;
            }
          default:
            jj_la1[6] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
{if ("" != null) return node;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("stmnt");
    }
}

// returnStmnt -> "return" expr ";"
  final public ReturnStmntNode returnStmnt() throws ParseException {
    trace_call("returnStmnt");
    try {
ExprNode expr;
      jj_consume_token(33);
      expr = expr();
      jj_consume_token(27);
{if ("" != null) return new ReturnStmntNode(expr);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("returnStmnt");
    }
}

// ifStmnt -> "if" "(" expr ")" stmnt ("else" stmnt)?
  final public IfStmntNode ifStmnt() throws ParseException {
    trace_call("ifStmnt");
    try {
StmntNode ifExpr, ifStmnt, elseStmnt = null;
      jj_consume_token(30);
      jj_consume_token(21);
      ifExpr = expr();
      jj_consume_token(22);
      ifStmnt = stmnt();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 31:{
        jj_consume_token(31);
        elseStmnt = stmnt();
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        ;
      }
{if ("" != null) return new IfStmntNode(ifExpr,ifStmnt,elseStmnt);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ifStmnt");
    }
}

// whileStmnt -> "while" "(" expr ")" stmnt
  final public WhileStmntNode whileStmnt() throws ParseException {
    trace_call("whileStmnt");
    try {
StmntNode whileExpr, whileStmnt;
      jj_consume_token(32);
      jj_consume_token(21);
      whileExpr = expr();
      jj_consume_token(22);
      whileStmnt = stmnt();
{if ("" != null) return new WhileStmntNode(whileExpr,whileStmnt);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("whileStmnt");
    }
}

// blockStmnt -> "{" (decl | stmnt)* "}"
  final public BlockStmntNode blockStmnt() throws ParseException {
    trace_call("blockStmnt");
    try {
BlockStmntNode node = new BlockStmntNode();
        Node declOrStmnt;
      jj_consume_token(25);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 6:
        case 7:
        case 11:
        case 16:
        case 19:
        case 21:
        case 23:
        case 25:
        case 27:
        case 28:
        case 30:
        case 32:
        case 33:
        case Type:
        case 35:
        case 36:
        case BoolLiteral:
        case CharLiteral:
        case StringLiteral:
        case IntegerLiteral:
        case Identifier:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_3;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case Type:
        case 35:
        case 36:{
          declOrStmnt = decl();
          break;
          }
        case 6:
        case 7:
        case 11:
        case 16:
        case 19:
        case 21:
        case 23:
        case 25:
        case 27:
        case 28:
        case 30:
        case 32:
        case 33:
        case BoolLiteral:
        case CharLiteral:
        case StringLiteral:
        case IntegerLiteral:
        case Identifier:{
          declOrStmnt = stmnt();
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
node.declOrStmntList.add(declOrStmnt);
      }
      jj_consume_token(26);
{if ("" != null) return node;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("blockStmnt");
    }
}

// type -> arrayType | <Type> | setType | mapType
  final public TypeNode type() throws ParseException {
    trace_call("type");
    try {
TypeNode node = null;
        Token type = null;
      if (jj_2_2(2)) {
        node = arrayType();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case Type:{
          type = jj_consume_token(Type);
          break;
          }
        case 35:{
          node = setType();
          break;
          }
        case 36:{
          node = mapType();
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
if(type == null) {
            {if ("" != null) return node;}
        } else {
            {if ("" != null) return new TypeNode(VariableType.of(type.image));}
        }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("type");
    }
}

// setType -> "Set" "<" <Type> ">"
  final public SetTypeNode setType() throws ParseException {
    trace_call("setType");
    try {
Token type;
      jj_consume_token(35);
      jj_consume_token(23);
      type = jj_consume_token(Type);
      jj_consume_token(24);
{if ("" != null) return new SetTypeNode(VariableType.of(type.image));}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("setType");
    }
}

// mapType -> "Map" "<" <Type> , <Type> ">"
  final public MapTypeNode mapType() throws ParseException {
    trace_call("mapType");
    try {
Token key,value;
      jj_consume_token(36);
      jj_consume_token(23);
      key = jj_consume_token(Type);
      jj_consume_token(14);
      value = jj_consume_token(Type);
      jj_consume_token(24);
{if ("" != null) return new MapTypeNode(VariableType.of(key.image),VariableType.of(value.image));}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("mapType");
    }
}

// arrayType -> <Type> "[]"
  final public ArrayTypeNode arrayType() throws ParseException {
    trace_call("arrayType");
    try {
Token type;
      type = jj_consume_token(Type);
      jj_consume_token(18);
{if ("" != null) return new ArrayTypeNode(VariableType.of(type.image));}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("arrayType");
    }
}

// atom -> "!" atom | <Character> | <String> | <Integer> | <Boolean>
//         | set | map | array
//         | range | fa
//         | (<Identifier> ".")? methCall
//         | (state | <Identifier> ("." <Identifier>)*) (transition)?
  final public AtomNode atom() throws ParseException {
    trace_call("atom");
    try {
Token token = null;
        Token attribute;
        AtomNode atom;
        MethCallNode methCall;
        StateLitNode state = null;
        TransitionLitNode transition = null;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 11:{
        jj_consume_token(11);
        atom = atom();
{if ("" != null) return new NegationNode(atom);}
        break;
        }
      case CharLiteral:{
        token = jj_consume_token(CharLiteral);
{if ("" != null) return new LitNode(token);}
        break;
        }
      case StringLiteral:{
        token = jj_consume_token(StringLiteral);
{if ("" != null) return new LitNode(token);}
        break;
        }
      case IntegerLiteral:{
        token = jj_consume_token(IntegerLiteral);
{if ("" != null) return new LitNode(token);}
        break;
        }
      case BoolLiteral:{
        token = jj_consume_token(BoolLiteral);
{if ("" != null) return new LitNode(token);}
        break;
        }
      case 25:{
        atom = set();
{if ("" != null) return atom;}
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        if (jj_2_5(3)) {
          atom = map();
{if ("" != null) return atom;}
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 19:{
            atom = array();
{if ("" != null) return atom;}
            break;
            }
          case 16:{
            atom = range();
{if ("" != null) return atom;}
            break;
            }
          case 23:{
            atom = fa();
{if ("" != null) return atom;}
            break;
            }
          default:
            jj_la1[13] = jj_gen;
            if (jj_2_6(4)) {
              if (jj_2_3(2)) {
                token = jj_consume_token(Identifier);
                jj_consume_token(15);
              } else {
                ;
              }
              methCall = methCall();
if (token == null) {
            {if ("" != null) return methCall;}
        } else {
            {if ("" != null) return new ClassMethCallNode(token, methCall);}
        }
            } else if (jj_2_7(2)) {
              token = jj_consume_token(Identifier);
              jj_consume_token(15);
              attribute = jj_consume_token(Identifier);
{if ("" != null) return new ReadClassAttributeNode(token, attribute);}
            } else {
              switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
              case 28:
              case Identifier:{
                switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
                case 28:{
                  state = state();
                  break;
                  }
                case Identifier:{
                  token = jj_consume_token(Identifier);
                  break;
                  }
                default:
                  jj_la1[11] = jj_gen;
                  jj_consume_token(-1);
                  throw new ParseException();
                }
                if (jj_2_4(3)) {
                  transition = transition();
                } else {
                  ;
                }
if (transition == null) {
            if (token == null) {
                {if ("" != null) return state;}
            } else {
                {if ("" != null) return new IdentifierNode(token);}
            }
        } else {
            {if ("" != null) return new TransitionLitWithStartNode(token, state, transition);}
        }
                break;
                }
              default:
                jj_la1[14] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
            }
          }
        }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("atom");
    }
}

// set -> "{" atom ("," atom)* "}"
  final public SetLitNode set() throws ParseException {
    trace_call("set");
    try {
SetLitNode node = new SetLitNode();
        AtomNode first, last;
      jj_consume_token(25);
      first = atom();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 14:{
          ;
          break;
          }
        default:
          jj_la1[15] = jj_gen;
          break label_4;
        }
        jj_consume_token(14);
        last = atom();
node.elementList.add(last);
      }
node.elementList.add(first);
      jj_consume_token(26);
{if ("" != null) return node;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("set");
    }
}

// map -> "[[" atom ":" atom ("," atom ":" atom)* "]]"
  final public MapLitNode map() throws ParseException {
    trace_call("map");
    try {
MapLitNode node = new MapLitNode();
        AtomNode firstKey, firstValue, lastKey, lastValue;
      jj_consume_token(19);
      firstKey = atom();
      jj_consume_token(29);
      firstValue = atom();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 14:{
          ;
          break;
          }
        default:
          jj_la1[16] = jj_gen;
          break label_5;
        }
        jj_consume_token(14);
        lastKey = atom();
        jj_consume_token(29);
        lastValue = atom();
node.elements.put(lastKey, lastValue);
      }
node.elements.put(firstKey, firstValue);
      jj_consume_token(20);
{if ("" != null) return node;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("map");
    }
}

// array -> "[[" atom ("," atom)* "]]"
  final public ArrayLitNode array() throws ParseException {
    trace_call("array");
    try {
ArrayLitNode node = new ArrayLitNode();
        AtomNode first, last;
      jj_consume_token(19);
      first = atom();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 14:{
          ;
          break;
          }
        default:
          jj_la1[17] = jj_gen;
          break label_6;
        }
        jj_consume_token(14);
        last = atom();
node.elementList.add(last);
      }
node.elementList.add(0, first);
      jj_consume_token(20);
{if ("" != null) return node;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("array");
    }
}

// methCall -> <Identifier> "(" (atom ("," atom)*)? ")"
  final public MethCallNode methCall() throws ParseException {
    trace_call("methCall");
    try {
MethCallNode node = new MethCallNode();
        Token identifier;
        AtomNode first, last;
      identifier = jj_consume_token(Identifier);
      jj_consume_token(21);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 11:
      case 16:
      case 19:
      case 23:
      case 25:
      case 28:
      case BoolLiteral:
      case CharLiteral:
      case StringLiteral:
      case IntegerLiteral:
      case Identifier:{
        first = atom();
        label_7:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 14:{
            ;
            break;
            }
          default:
            jj_la1[18] = jj_gen;
            break label_7;
          }
          jj_consume_token(14);
          last = atom();
node.elementList.add(last);
        }
node.elementList.add(0, first);
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        ;
      }
      jj_consume_token(22);
node.identifier = identifier; {if ("" != null) return node;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("methCall");
    }
}
